# shutter

./: .perltidyrc  CHANGES  Makefile  README  REMOVED.md  TODO-GTK3.md  cpanfile  po2mo.sh  shutter.appdata.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  code_of_conduct.md  feature_request.md  question.md
.github/workflows/: run-tests.yml
debian/: changelog  control  copyright  dirs  postinst  postrm  rules
share/app-install/desktop/: shutter.desktop
share/appdata/: shutter.appdata.xml
share/applications/: gscrot.desktop  shutter.desktop
share/doc/gscrot-plugins-bash/: credits
share/doc/shutter/: README
share/gscrot/resources/license/: gplv3_hint
share/gscrot/resources/locale/: gscrot_messages_template.po
share/gscrot/resources/pofiles/: credits  gscrot-plugins-bash.pot  gscrot.pot  gscrot_messages_template.po  (+1 more)
share/man/man1/: shutter.1
share/shutter/: update-notifier-shutter
shutter-rust/: Cargo.toml  build.rs  resources.gresource.xml
shutter-rust/resources/: editorwindow.ui  mainwindow.ui  menus.ui
shutter-rust/src/: editorwindow.rs  main.rs  mainwindow.rs  settings.rs
t/: syntax.t
t/Shutter/App/: 01_common.t  02_directories.t
t/Shutter/Draw/: 001_update_warning_text.t  002_ui_manager.t  003_getters_and_setters.t  004_ellipse.t  005_utils.t  02_ui_manager.t  02_update_warning_text.t  03_getters_and_setters.t  04_ellipse.t
t/lib/Test/: Common.pm  SimpleApp.pm  Window.pm
tools/: gen_translation.pl  gen_translation_bash.pl  gen_translation_plugins.pl  to_translate  to_translate_bash  update-notifier-shutter-0.65
(+722 files in other folders)
